--- a/source/stewprojectsettingseditor.lfm
+++ b/source/stewprojectsettingseditor.lfm
@@ -1,4 +1,4 @@
-object ProjectSettingsInspector: TProjectSettingsInspector
+object ProjectSettingsEditor: TProjectSettingsEditor
   Left = 0
   Height = 240
   Top = 0
