-- Now working with statuses, and default status and default category -- rudiments of the UserProperty stuff.

--- a/source/stewprojectsettingseditor.lfm
+++ b/source/stewprojectsettingseditor.lfm
@@ -1,21 +1,21 @@
 inherited ProjectSettingsEditor: TProjectSettingsEditor
-  Height = 388
-  Width = 471
-  ClientHeight = 388
-  ClientWidth = 471
+  Height = 427
+  Width = 540
+  ClientHeight = 427
+  ClientWidth = 540
   DesignLeft = 564
   inherited ToolbarPanel: TPanel
     Height = 24
-    Width = 471
+    Width = 540
     ClientHeight = 24
-    ClientWidth = 471
+    ClientWidth = 540
     inherited RightHandToolbar: TToolBar
-      Left = 429
+      Left = 498
       Height = 24
     end
     inherited LeftHandToolbar: TToolBar
       Height = 24
-      Width = 429
+      Width = 498
       object RefreshButton: TToolButton[0]
         Left = 37
         Top = 0
@@ -35,14 +35,14 @@ inherited ProjectSettingsEditor: TProjectSettingsEditor
   object DefaultDocExtensionPanel: TPanel[1]
     Left = 0
     Height = 26
-    Top = 200
-    Width = 471
+    Top = 298
+    Width = 540
     Align = alTop
     AutoSize = True
     BorderSpacing.Top = 10
     BevelOuter = bvNone
     ClientHeight = 26
-    ClientWidth = 471
+    ClientWidth = 540
     TabOrder = 1
     object DefaultDocExtensionLabel: TLabel
       Left = 10
@@ -69,14 +69,14 @@ inherited ProjectSettingsEditor: TProjectSettingsEditor
   object DefaultThumbnailExtensionPanel: TPanel[2]
     Left = 0
     Height = 26
-    Top = 272
-    Width = 471
+    Top = 370
+    Width = 540
     Align = alTop
     AutoSize = True
     BorderSpacing.Top = 10
     BevelOuter = bvNone
     ClientHeight = 26
-    ClientWidth = 471
+    ClientWidth = 540
     TabOrder = 2
     object DefaultThumbnailExtensionLabel: TLabel
       Left = 10
@@ -103,14 +103,14 @@ inherited ProjectSettingsEditor: TProjectSettingsEditor
   object DefaultNotesExtensionPanel: TPanel[3]
     Left = 0
     Height = 26
-    Top = 236
-    Width = 471
+    Top = 334
+    Width = 540
     Align = alTop
     AutoSize = True
     BorderSpacing.Top = 10
     BevelOuter = bvNone
     ClientHeight = 26
-    ClientWidth = 471
+    ClientWidth = 540
     TabOrder = 3
     object DefaultNotesExtensionLabel: TLabel
       Left = 10
@@ -134,63 +134,135 @@ inherited ProjectSettingsEditor: TProjectSettingsEditor
       TabOrder = 0
     end
   end
-  object CategoryDefinitionsPanel: TPanel[4]
+  object GridsPanel: TPanel[4]
     Left = 0
-    Height = 156
+    Height = 254
     Top = 34
-    Width = 471
+    Width = 540
     Align = alTop
     BorderSpacing.Top = 10
     BevelOuter = bvNone
-    ClientHeight = 156
-    ClientWidth = 471
+    ClientHeight = 254
+    ClientWidth = 540
     TabOrder = 4
-    object CategoryDefinitionsHeaderPanel: TPanel
+    object CategoryDefinitionsPanel: TPanel
       Left = 0
-      Height = 16
+      Height = 254
       Top = 0
-      Width = 471
-      Align = alTop
-      AutoSize = True
+      Width = 251
+      Align = alLeft
       BevelOuter = bvNone
-      ClientHeight = 16
-      ClientWidth = 471
+      ClientHeight = 254
+      ClientWidth = 251
       TabOrder = 0
-      object CategoryDefinitionsLabel: TLabel
+      object CategoryDefinitionsGrid: TStringGrid
         Left = 10
+        Height = 228
+        Top = 26
+        Width = 241
+        Align = alClient
+        BorderSpacing.Left = 10
+        BorderSpacing.Top = 10
+        ColCount = 3
+        Columns = <        
+          item
+            Title.Caption = 'Name'
+          end        
+          item
+            ButtonStyle = cbsButton
+            Title.Caption = 'Color'
+          end        
+          item
+            Title.Caption = 'Default'
+          end>
+        FixedCols = 0
+        RowCount = 1
+        TabOrder = 0
+        TitleStyle = tsNative
+      end
+      object CategoryDefinitionsHeaderPanel: TPanel
+        Left = 0
         Height = 16
         Top = 0
-        Width = 128
-        Align = alLeft
-        BorderSpacing.Left = 10
-        Caption = 'Category Definitions:'
-        FocusControl = CategoryDefinitionsGrid
-        Layout = tlBottom
-        ParentColor = False
+        Width = 251
+        Align = alTop
+        AutoSize = True
+        BevelOuter = bvNone
+        ClientHeight = 16
+        ClientWidth = 251
+        TabOrder = 1
+        object CategoryDefinitionsLabel: TLabel
+          Left = 10
+          Height = 16
+          Top = 0
+          Width = 128
+          Align = alLeft
+          BorderSpacing.Left = 10
+          Caption = 'Category Definitions:'
+          Layout = tlBottom
+          ParentColor = False
+        end
       end
     end
-    object CategoryDefinitionsGrid: TStringGrid
-      Left = 10
-      Height = 130
-      Top = 26
-      Width = 451
-      Align = alClient
-      BorderSpacing.Left = 10
-      BorderSpacing.Top = 10
-      BorderSpacing.Right = 10
-      ColCount = 2
-      Columns = <      
-        item
-          Title.Caption = 'Name'
-        end      
-        item
-          ButtonStyle = cbsButton
-          Title.Caption = 'Color'
-        end>
-      FixedCols = 0
-      RowCount = 1
+    object StatusDefinitionsPanel: TPanel
+      Left = 251
+      Height = 254
+      Top = 0
+      Width = 261
+      Align = alLeft
+      BevelOuter = bvNone
+      ClientHeight = 254
+      ClientWidth = 261
       TabOrder = 1
-      TitleStyle = tsNative
+      object StatusDefinitionsGrid: TStringGrid
+        Left = 10
+        Height = 228
+        Top = 26
+        Width = 241
+        Align = alClient
+        BorderSpacing.Left = 10
+        BorderSpacing.Top = 10
+        BorderSpacing.Right = 10
+        ColCount = 3
+        Columns = <        
+          item
+            Title.Caption = 'Name'
+          end        
+          item
+            ButtonStyle = cbsButton
+            Title.Caption = 'Color'
+          end        
+          item
+            Title.Caption = 'Default'
+          end>
+        FixedCols = 0
+        RowCount = 1
+        TabOrder = 0
+        TitleStyle = tsNative
+      end
+      object StatusDefinitionsHeaderPanel: TPanel
+        Left = 0
+        Height = 16
+        Top = 0
+        Width = 261
+        Align = alTop
+        AutoSize = True
+        BevelOuter = bvNone
+        ClientHeight = 16
+        ClientWidth = 261
+        TabOrder = 1
+        object StatusDefinitionsLabel: TLabel
+          Left = 10
+          Height = 16
+          Top = 0
+          Width = 111
+          Align = alLeft
+          BorderSpacing.Left = 10
+          Caption = 'Status Definitions:'
+          Layout = tlBottom
+          ParentColor = False
+        end
+      end
     end
   end
 end
