-- status and categories are completely editable now.

--- a/source/stewmainform.lfm
+++ b/source/stewmainform.lfm
@@ -20,6 +20,9 @@ object MainForm: TMainForm
         Caption = 'Preferences'
         OnClick = PreferencesMenuItemClick
       end
+      object Separator1: TMenuItem
+        Caption = '-'
+      end
       object ExitMenuItem: TMenuItem
         Caption = 'Exit'
         OnClick = ExitMenuItemClick
