--- a/source/stewprojectsettingseditor.lfm
+++ b/source/stewprojectsettingseditor.lfm
@@ -1,22 +1,22 @@
 inherited ProjectSettingsEditor: TProjectSettingsEditor
   Height = 643
-  Width = 540
+  Width = 680
   ClientHeight = 643
-  ClientWidth = 540
+  ClientWidth = 680
   DesignLeft = 451
   DesignTop = 86
   inherited ToolbarPanel: TPanel
     Height = 24
-    Width = 540
+    Width = 680
     ClientHeight = 24
-    ClientWidth = 540
+    ClientWidth = 680
     inherited RightHandToolbar: TToolBar
-      Left = 498
+      Left = 638
       Height = 24
     end
     inherited LeftHandToolbar: TToolBar
       Height = 24
-      Width = 498
+      Width = 638
       object RefreshButton: TToolButton[0]
         Left = 37
         Top = 0
@@ -43,13 +43,13 @@ inherited ProjectSettingsEditor: TProjectSettingsEditor
     Left = 0
     Height = 26
     Top = 298
-    Width = 540
+    Width = 680
     Align = alTop
     AutoSize = True
     BorderSpacing.Top = 10
     BevelOuter = bvNone
     ClientHeight = 26
-    ClientWidth = 540
+    ClientWidth = 680
     TabOrder = 1
     object DefaultDocExtensionLabel: TLabel
       Left = 10
@@ -77,13 +77,13 @@ inherited ProjectSettingsEditor: TProjectSettingsEditor
     Left = 0
     Height = 26
     Top = 370
-    Width = 540
+    Width = 680
     Align = alTop
     AutoSize = True
     BorderSpacing.Top = 10
     BevelOuter = bvNone
     ClientHeight = 26
-    ClientWidth = 540
+    ClientWidth = 680
     TabOrder = 2
     object DefaultThumbnailExtensionLabel: TLabel
       Left = 10
@@ -111,13 +111,13 @@ inherited ProjectSettingsEditor: TProjectSettingsEditor
     Left = 0
     Height = 26
     Top = 334
-    Width = 540
+    Width = 680
     Align = alTop
     AutoSize = True
     BorderSpacing.Top = 10
     BevelOuter = bvNone
     ClientHeight = 26
-    ClientWidth = 540
+    ClientWidth = 680
     TabOrder = 3
     object DefaultNotesExtensionLabel: TLabel
       Left = 10
@@ -145,12 +145,12 @@ inherited ProjectSettingsEditor: TProjectSettingsEditor
     Left = 0
     Height = 254
     Top = 34
-    Width = 540
+    Width = 680
     Align = alTop
     BorderSpacing.Top = 10
     BevelOuter = bvNone
     ClientHeight = 254
-    ClientWidth = 540
+    ClientWidth = 680
     TabOrder = 4
     object CategoryDefinitionsPanel: TPanel
       Left = 0
@@ -164,28 +164,22 @@ inherited ProjectSettingsEditor: TProjectSettingsEditor
       TabOrder = 0
       object CategoryDefinitionsGrid: TStringGrid
         Left = 10
-        Height = 228
-        Top = 26
+        Height = 212
+        Top = 42
         Width = 241
         Align = alClient
         BorderSpacing.Left = 10
-        BorderSpacing.Top = 10
-        ColCount = 3
-        Columns = <        
-          item
-            Title.Caption = 'Name'
-          end        
-          item
-            ButtonStyle = cbsButton
-            Title.Caption = 'Color'
-          end        
-          item
-            Title.Caption = 'Default'
-          end>
+        ColCount = 0
         FixedCols = 0
-        RowCount = 1
+        FixedRows = 0
+        Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goHorzLine, goRangeSelect, goEditing, goRowSelect, goSmoothScroll]
+        RowCount = 0
         TabOrder = 0
         TitleStyle = tsNative
+        OnCheckboxToggled = CategoryDefinitionsGridCheckboxToggled
+        OnDrawCell = CategoryDefinitionsGridDrawCell
+        OnButtonClick = CategoryDefinitionsGridButtonClick
+        OnValidateEntry = CategoryDefinitionsGridValidateEntry
       end
       object CategoryDefinitionsHeaderPanel: TPanel
         Left = 0
@@ -210,6 +204,28 @@ inherited ProjectSettingsEditor: TProjectSettingsEditor
           ParentColor = False
         end
       end
+      object CategoryDefinitionsToolbar: TToolBar
+        Left = 10
+        Height = 26
+        Top = 16
+        Width = 241
+        BorderSpacing.Left = 10
+        Caption = 'CategoryDefinitionsToolbar'
+        ShowCaptions = True
+        TabOrder = 2
+        object AddCategoryButton: TToolButton
+          Left = 1
+          Top = 2
+          Caption = 'Add'
+          OnClick = AddCategoryButtonClick
+        end
+        object DeleteCategoryButton: TToolButton
+          Left = 34
+          Top = 2
+          Caption = 'Del'
+          OnClick = DeleteCategoryButtonClick
+        end
+      end
     end
     object StatusDefinitionsPanel: TPanel
       Left = 251
@@ -217,35 +233,28 @@ inherited ProjectSettingsEditor: TProjectSettingsEditor
       Top = 0
       Width = 261
       Align = alLeft
+      BorderSpacing.Right = 10
       BevelOuter = bvNone
       ClientHeight = 254
       ClientWidth = 261
       TabOrder = 1
       object StatusDefinitionsGrid: TStringGrid
         Left = 10
-        Height = 228
-        Top = 26
-        Width = 241
+        Height = 212
+        Top = 42
+        Width = 251
         Align = alClient
         BorderSpacing.Left = 10
-        BorderSpacing.Top = 10
-        BorderSpacing.Right = 10
-        ColCount = 3
-        Columns = <        
-          item
-            Title.Caption = 'Name'
-          end        
-          item
-            ButtonStyle = cbsButton
-            Title.Caption = 'Color'
-          end        
-          item
-            Title.Caption = 'Default'
-          end>
+        ColCount = 0
         FixedCols = 0
-        RowCount = 1
+        FixedRows = 0
+        Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goHorzLine, goRangeSelect, goEditing, goRowSelect, goSmoothScroll]
+        RowCount = 0
         TabOrder = 0
         TitleStyle = tsNative
+        OnCheckboxToggled = CategoryDefinitionsGridCheckboxToggled
+        OnDrawCell = CategoryDefinitionsGridDrawCell
+        OnButtonClick = CategoryDefinitionsGridButtonClick
       end
       object StatusDefinitionsHeaderPanel: TPanel
         Left = 0
@@ -270,28 +279,85 @@ inherited ProjectSettingsEditor: TProjectSettingsEditor
           ParentColor = False
         end
       end
+      object StatusDefinitionsToolbar: TToolBar
+        Left = 10
+        Height = 26
+        Top = 16
+        Width = 251
+        BorderSpacing.Left = 10
+        Caption = 'StatusDefinitionsToolbar'
+        ShowCaptions = True
+        TabOrder = 2
+        object AddStatusButton: TToolButton
+          Left = 1
+          Top = 2
+          Caption = 'Add'
+          OnClick = AddStatusButtonClick
+        end
+        object DeleteStatusButton: TToolButton
+          Left = 34
+          Top = 2
+          Caption = 'Del'
+          OnClick = DeleteStatusButtonClick
+        end
+      end
     end
   end
   object UserPropertiesPanel: TPanel[5]
     Left = 0
     Height = 218
     Top = 406
-    Width = 540
+    Width = 680
     Align = alTop
     BorderSpacing.Top = 10
     BevelOuter = bvNone
     ClientHeight = 218
-    ClientWidth = 540
+    ClientWidth = 680
     TabOrder = 5
     object UserPropertiesLabel: TLabel
       Left = 10
       Height = 16
       Top = 0
-      Width = 530
+      Width = 670
       Align = alTop
       BorderSpacing.Left = 10
       Caption = 'Custom Properties:'
       ParentColor = False
+    end
+  end
+  object CategoryColorChooser: TColorDialog[6]
+    Color = clBlack
+    CustomColors.Strings = (
+      'ColorA=000000'
+      'ColorB=000080'
+      'ColorC=008000'
+      'ColorD=008080'
+      'ColorE=800000'
+      'ColorF=800080'
+      'ColorG=808000'
+      'ColorH=808080'
+      'ColorI=C0C0C0'
+      'ColorJ=0000FF'
+      'ColorK=00FF00'
+      'ColorL=00FFFF'
+      'ColorM=FF0000'
+      'ColorN=FF00FF'
+      'ColorO=FFFF00'
+      'ColorP=FFFFFF'
+      'ColorQ=C0DCC0'
+      'ColorR=F0CAA6'
+      'ColorS=F0FBFF'
+      'ColorT=A4A0A0'
+    )
+    left = 64
+    top = 488
+  end
+  object ColorMenu: TPopupMenu[7]
+    left = 217
+    top = 488
+    object CustomColorMenu: TMenuItem
+      Caption = 'Custom...'
+      OnClick = CustomColorMenuClick
     end
   end
 end
